# rtPGM

./: .gitignore  readme.md  setup.py
examples/: activesuspension.py  double_integrator.py  firstorder.py  integrator.py  massspringdamper.py  mecotron.py  mecotron_inverted.py  tilting_table.py
examples/comparison/: CMakeLists.txt  lqr_codegen.py  mecotron_codegen.py  pgm_codegen.py  readme.md  rtpgm_codegen.py  run_comparison.py  run_comparison_n_steps.py  satlqr_codegen.py
examples/comparison/src/: LQR.h  PGM.h  mecotron.h  mecotron_nl.h  mecotron_step_hpmpc.cpp  mecotron_step_lqr.cpp  mecotron_step_pgm.cpp  mecotron_step_qpoases.cpp  mecotron_step_rtpgm.cpp  mecotron_step_satlqr.cpp  rtPGM.h  saturatedLQR.h
examples/data/: mecotron.txt  mecotron_inverted.txt  roadprofile.csv
rtPGM/: __init__.py  controller.py  controller_codegen.py
